log
Sat Mar 19 22:24:41 UTC 2022: 
 list.c | 68 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 66 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:34:20: error: expected expression before ‘)’ token
   List*list= (list*)malloc(sizeof(list));
                    ^
list.c: In function ‘popCurrent’:
list.c:124:7: error: unused variable ‘elimina3’ [-Werror=unused-variable]
   int elimina3;
       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
78d39e4
Sat Mar 19 22:25:36 UTC 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:34:20: error: expected expression before ‘)’ token
   List*list= (list*)malloc(sizeof(list));
                    ^
Compilation failed
5f899b6
Sat Mar 19 22:33:42 UTC 2022: 
 list.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:34:19: error: expected expression before ‘)’ token
   List*list=(list*)malloc(sizeof(list));
                   ^
Compilation failed
e59b8d0
Sat Mar 19 22:35:32 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c88a45f
Sat Mar 19 22:41:38 UTC 2022: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
8a67c3b
Sat Mar 19 22:44:33 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
6682220
Sat Mar 19 22:48:18 UTC 2022: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
acb4c6c
Sat Mar 19 22:49:25 UTC 2022: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
db4fc91
Sat Mar 19 22:50:06 UTC 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
227ba1e
Sat Mar 19 22:56:38 UTC 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
725358a
Sat Mar 19 22:57:01 UTC 2022: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
ed4a2d2
Sat Mar 19 23:06:38 UTC 2022: 
 list.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  0|0
3e4a036
Sat Mar 19 23:22:52 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
1f4df81
Sat Mar 19 23:24:37 UTC 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
56c6801
Sat Mar 19 23:25:01 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0bf8038
Sat Mar 19 23:27:00 UTC 2022: 
 list.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
 tests:  0|0
fed0057
Sat Mar 19 23:29:49 UTC 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
2cd6847
